// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control component should be fullwidth, loading and size = large 1`] = `
<DocumentFragment>
  <div
    class="control is-expanded is-loading is-large"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Control component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <div
    class="control other-class this-is-a-test"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Control component should render 1`] = `
<DocumentFragment>
  <div
    class="control"
  />
</DocumentFragment>
`;

exports[`Control component should render as a html section element 1`] = `
<DocumentFragment>
  <section
    class="control"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Control component should use inline styles 1`] = `
<DocumentFragment>
  <div
    class="control"
    style="height: 250px;"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;
